[gd_scene load_steps=18 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Board.jpeg" type="Texture" id=2]
[ext_resource path="res://Grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/element_red_diamond.png" type="Texture" id=5]
[ext_resource path="res://Assets/element_red_diamond_glossy.png" type="Texture" id=6]
[ext_resource path="res://Assets/element_yellow_diamond.png" type="Texture" id=7]
[ext_resource path="res://Assets/element_yellow_diamond_glossy.png" type="Texture" id=8]
[ext_resource path="res://Assets/element_blue_diamond.png" type="Texture" id=9]
[ext_resource path="res://Assets/element_blue_diamond_glossy.png" type="Texture" id=10]
[ext_resource path="res://Assets/element_grey_diamond.png" type="Texture" id=11]
[ext_resource path="res://Assets/element_grey_diamond_glossy.png" type="Texture" id=12]
[ext_resource path="res://Player.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Button.png" type="Texture" id=14]
[ext_resource path="res://Assets/popup pressed.png" type="Texture" id=15]
[ext_resource path="res://Assets/backIconW.png" type="Texture" id=16]
[ext_resource path="res://Assets/MotionControlFont_48.tres" type="DynamicFont" id=17]

[node name="Main" type="Node2D" index="0"]

position = Vector2( 5.03503, 2.51752 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="MainBackground" type="Sprite" parent="." index="0"]

position = Vector2( 954.215, 538.77 )
scale = Vector2( 1.70869, 1.44462 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Grid" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 620.702, 318.088 )
blockSize = 100
spaceBetween = 10

[node name="GreenGem" parent="." index="2" instance=ExtResource( 4 )]

scale = Vector2( 2, 2 )
_sections_unfolded = [ "Transform" ]
_color = 2
startingPos = Vector2( 650, 150 )

[node name="RedGem" parent="." index="3" instance=ExtResource( 4 )]

scale = Vector2( 2, 2 )
_sections_unfolded = [ "Transform" ]
t01 = ExtResource( 5 )
t02 = ExtResource( 6 )
_color = 1
startingPos = Vector2( 850, 150 )

[node name="YellowGem" parent="." index="4" instance=ExtResource( 4 )]

scale = Vector2( 2, 2 )
_sections_unfolded = [ "Transform" ]
t01 = ExtResource( 7 )
t02 = ExtResource( 8 )
_color = 3
startingPos = Vector2( 1050, 150 )

[node name="BlueGem" parent="." index="5" instance=ExtResource( 4 )]

scale = Vector2( 2, 2 )
_sections_unfolded = [ "Transform" ]
t01 = ExtResource( 9 )
t02 = ExtResource( 10 )
_color = 4
startingPos = Vector2( 1250, 150 )

[node name="WhiteGem" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 57.003, -94.225 )
scale = Vector2( 2, 2 )
_sections_unfolded = [ "Transform" ]
t01 = ExtResource( 11 )
t02 = ExtResource( 12 )
_color = 0
startingPos = Vector2( -100, -100 )

[node name="Player01" parent="." index="7" instance=ExtResource( 13 )]

position = Vector2( 261.386, 532.306 )
playerName = "Player 1"

[node name="Player02" parent="." index="8" instance=ExtResource( 13 )]

position = Vector2( 1617, 521.349 )
playerName = "Player 2"

[node name="ReturnButton" type="TextureButton" parent="." index="9"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="ReturnButtonArrow" type="Sprite" parent="ReturnButton" index="0"]

position = Vector2( 37.218, 43.3797 )
scale = Vector2( 0.356577, 0.356577 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Material" ]

[node name="WinScreen" type="Control" parent="." index="10"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="WinPopup" type="PopupMenu" parent="WinScreen" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 768.0
margin_top = 104.0
margin_right = 1203.0
margin_bottom = 334.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
items = [  ]
hide_on_item_selection = false
hide_on_checkable_item_selection = false
hide_on_state_item_selection = false
_sections_unfolded = [ "Popup", "Rect" ]

[node name="WinPopupBackground" type="Sprite" parent="WinScreen/WinPopup" index="1"]

position = Vector2( 194.5, 117.699 )
scale = Vector2( 0.449337, 0.706082 )
texture = ExtResource( 14 )

[node name="ExitButton" type="TextureButton" parent="WinScreen/WinPopup" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -22.0
margin_top = 130.0
margin_right = 157.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true
_sections_unfolded = [ "Textures", "custom_colors", "custom_fonts" ]

[node name="PlayAgainButton" type="TextureButton" parent="WinScreen/WinPopup" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 128.0
margin_right = 418.0
margin_bottom = 203.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
expand = true
_sections_unfolded = [ "Textures", "custom_fonts" ]

[node name="EndGameLabel" type="Label" parent="WinScreen/WinPopup" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 16.0
margin_right = 376.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
text = "Game over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="WonPlayerLabel" type="Label" parent="WinScreen/WinPopup" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 91.0
margin_top = 65.0
margin_right = 292.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
text = "Player 1 won!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_constants", "custom_fonts" ]

[node name="ExitLabel" type="Label" parent="WinScreen/WinPopup" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -4.0
margin_top = 143.0
margin_right = 145.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
text = "Exit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="PlayAgainLabel" type="Label" parent="WinScreen/WinPopup" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 140.0
margin_right = 405.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -3
text = "New Game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="gemPlaced" from="Grid" to="." method="_on_gemPlaced"]

[connection signal="dropped" from="GreenGem" to="." method="_on_Gem_dropped"]

[connection signal="dropped" from="GreenGem" to="Grid" method="_on_Gem_dropped"]

[connection signal="dropped" from="RedGem" to="." method="_on_Gem_dropped"]

[connection signal="dropped" from="RedGem" to="Grid" method="_on_Gem_dropped"]

[connection signal="dropped" from="YellowGem" to="." method="_on_Gem_dropped"]

[connection signal="dropped" from="YellowGem" to="Grid" method="_on_Gem_dropped"]

[connection signal="dropped" from="BlueGem" to="." method="_on_Gem_dropped"]

[connection signal="dropped" from="BlueGem" to="Grid" method="_on_Gem_dropped"]

[connection signal="dropped" from="WhiteGem" to="." method="_on_Gem_dropped"]

[connection signal="dropped" from="WhiteGem" to="Grid" method="_on_Gem_dropped"]

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]

[connection signal="pressed" from="WinScreen/WinPopup/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="WinScreen/WinPopup/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]


